--- a/IEEE/index.html
+++ b/IEEE/index.html
@@ -436,7 +436,7 @@
                 <div class="quick-links">
                           <div class="logo" style="margin-left: 50px;">
                             <a href="IEEE MUT.html" target="_self" style="text-decoration: none;" title="Welcome to IEEE Murang'a University">
-                              <img src="official black.png" alt="logo" style="width: 250px; height: 250px; margin-top: 20px;">
+                              <img src="official black.png" alt="logo" style="width: 65%; height: 250px; margin-top: 20px;">
                               <h2 style="font-size: 35px; margin-top: -40px; color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">IEEE Murang'a University<br> Student Branch.</h2>
                             </a>
                           </div>
@@ -445,7 +445,7 @@
                             <ol type="a">
                               <li><a href="IEEE MUT.html" title="Home page" target="_blank">Home</a></li>
                               <li><a href="#About Us" title="About us" target="_self">About Us</a></li>
-                              <li><a href="Membership.html" title="Engage with IEEE" target="_self">Membership</a></li>
+                              <li><a href="membership.html" title="Engage with IEEE" target="_self">Membership</a></li>
                               <li><a href="#Publications">Resourses</a></li>
                               <li><a href="#">Contact</a></li>
                             </ol>
@@ -477,7 +477,7 @@
                               </style>
                           </div>
                            <div class="button" style="margin-left: 800px;">
-                            <h2 style="font-size: 30px; margin-top: -150px;color: white; width:300px;">Connect with us</h2>
+                            <h2 style="font-size: 30px; margin-top: -150px;color: white; width: 80%;">Connect with us</h2>
                                <ul style="margin-top: 20px;">
                                    <li><a href="https://ieee-collabratec.ieee.org/" title="Connect on ieee-collabratec" alt= "IEEE Collabratec" target="_blank"><img src="https://th.bing.com/th?id=ODLS.f2d0aeb9-6092-466a-9227-59e9468e5a91&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2"></a></li> <!--The link to the IEEE Collabratec page-->
                                    <li><a href="https://www.facebook.com/IEEEMUTSB/" title="Facebook" alt="Facebook" target="_blank"><img src="https://th.bing.com/th?id=ODLS.ed551f5f-86b4-4f3c-b131-c5f6234517b7&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2"></a></li> <!--The link to the IEEE Facebook page-->
