--- a/IEEE/membership.html
+++ b/IEEE/membership.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html" title="About us" target="_self">About Us</a></li>
                     <li><a href="#Membership" title="Engage with IEEE" target="_self">Membership</a></li>
                     <li><a href="#Resources">Resourses</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact us.html">Contact</a></li>
                 </ul>
                 <style>
                   .menu a:link {
@@ -404,8 +404,8 @@
                         <li><a href="index.html" title="Home page" target="_blank">Home</a></li>
                         <li><a href="index.html" title="About us" target="_self">About Us</a></li>
                         <li><a href="membership.html" title="Engage with IEEE" target="_self">Membership</a></li>
-                        <li><a href="membership.html">Resourses</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#Resources">Resourses</a></li>
+                        <li><a href="contact us.html">Contact</a></li>
                       </ol>
                       <style>
                         .links a:link {
