Updates done on the contact page

--- a/IEEE/contact us.html
+++ b/IEEE/contact us.html
@@ -79,4 +79,44 @@
                   <a href="https://www.ieee.org/profile/public/createwebaccount/showCreateAccount.html?url=" title="IEEE Account Creation." target="_blank"><button class="bln">Get an IEEE account.</button></a>
                 </div>
             </div>
-        </div>
+        </div><br><br>
+
+        <section id="Contact us">
+            <div class="contact">
+                <h1>Contact Us</h1><br>
+                <p>We would love to hear from you! Please fill in the following form with your inquiry and we will get back to you with a response. Thank you for your interest in IEEE Murang'a University!</p>
+            </div><br><br>
+            <form style="margin-left: 50px; font-size: 16px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+              <label for="fname">First name:</label><br>
+              <input type="text" style="height: 50px; font-size: 30px;" id="fname" name="fname" size="50" value="John"><br><br>
+              <label for="lname">Last name:</label><br>
+              <input type="text" style="height: 50px; font-size: 30px;" id="lname" name="lname" size="50" value="Doe"><br><br>
+              <label for="email">Email Address:</label><br>
+              <input type="text" style="height: 50px; font-size: 30px;" id="lname" name="email" size="50" value="example@domain.com"><br><br>
+
+              <p>Select your Gender:</p><br>
+              <input type="radio" id="gender" name="Select your gender" value="Male">
+              <label for="male" style="font-size: 24px;">Male</label><br><br>
+              <input type="radio" id="gender" name="Select your gender" value="Female">
+              <label for="female" style="font-size: 24px;">Female</label><br><br>
+              <input type="radio" id="gender" name="Select your gender" value="Prefer not to say">
+              <label for="Prefer-not-to-say" style="font-size: 24px;">Prefer not to say</label>
+              <style>
+                input[type="radio"] {
+                  width: 20px; /* Adjust size */
+                  height: 20px; /* Adjust size */
+                  cursor: pointer;
+                }
+                input[type="text"] {
+                  width: 100%;
+                  padding: 12px 20px;
+                  margin: 8px 0;
+                  display: inline-block;
+                  border: 1px solid #ccc;
+                  box-sizing: border-box;
+                }
+              </style>
+            </form>
+
+
+        </section>
