--- a/IEEE/membership.html
+++ b/IEEE/membership.html
@@ -401,11 +401,11 @@
                     <div class="links">
                       <h2 style="font-size: 40px; margin-left: -50px;">Quick Links</h2>
                       <ol type="a">
-                        <li><a href="index.html" title="Home page" target="_blank">Home</a></li>
+                        <li><a href="index.html" title="Home page" target="_self">Home</a></li>
                         <li><a href="index.html" title="About us" target="_self">About Us</a></li>
                         <li><a href="membership.html" title="Engage with IEEE" target="_self">Membership</a></li>
-                        <li><a href="#Resources">Resourses</a></li>
-                        <li><a href="contact us.html">Contact</a></li>
+                        <li><a href="#Resources" title="Get more resources" target="_self">Resourses</a></li>
+                        <li><a href="contact us.html" title="Got any comment or Question" target="_self">Contact</a></li>
                       </ol>
                       <style>
                         .links a:link {
